--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview",
     "format": "oxfmt --write ."
   },
+  "trustedDependencies": [
+    "@rocicorp/zero-sqlite3"
+  ],
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@rocicorp/zero": "^0.25.4",
     "better-auth": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
