--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,11 +15,14 @@
         "./src/lib/*"
       ],
       "@/db/*": [
-        "./db/*"
+        "./src/db/*"
       ],
       "@/api/*": [
         "./api/*"
-      ]
+      ],
+      "@/api/db/*": [
+        "./api/db/*"
+      ],
     }
   },
   "files": [],
