--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zapp",
+  "name": "@bit/client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,8 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "format": "oxfmt --write ."
   },
   "dependencies": {
     "@rocicorp/zero": "^0.25.2",
@@ -22,6 +23,7 @@
     "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "oxfmt": "^0.19.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
