--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,27 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/components/*": [
-        "./src/components/*"
-      ],
-      "@/pages/*": [
-        "./src/pages/*"
-      ],
-      "@/lib/*": [
-        "./src/lib/*"
-      ],
-      "@/db/*": [
-        "./src/db/*"
-      ],
-      "@/api/*": [
-        "./api/*"
-      ],
-      "@/api/db/*": [
-        "./api/db/*"
-      ],
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/pages/*": ["./src/pages/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/db/*": ["./src/db/*"],
+      "@/api/*": ["./api/*"],
+      "@/api/db/*": ["./api/db/*"]
     }
   },
   "files": [],
