--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "concurrently": "^9.2.1",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.31.8",
+    "drizzle-zero": "^0.17.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
