--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,14 @@
     "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "octokit": "^5.0.5",
     "oxfmt": "^0.19.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
     "sst": "3.9.33",
+    "wouter": "^3.9.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
