--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "format": "oxfmt --write ."
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.41.0",
