--- a/client/package.json
+++ b/client/package.json
@@ -23,16 +23,19 @@
     "@base-ui/react": "^1.0.0",
     "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
+    "@shikijs/markdown-it": "^3.20.0",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "markdown-it-async": "^2.2.0",
     "octokit": "^5.0.5",
     "oxfmt": "^0.19.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
+    "shiki": "^3.20.0",
     "sst": "3.9.33",
     "wouter": "^3.9.0",
     "zod": "^4.1.13"
