--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@pierre/diffs": "^1.0.0",
     "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
     "@shikijs/markdown-it": "^3.20.0",
