--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:db-down": "docker compose --env-file .env -f ./docker/docker-compose.yml down",
     "dev:clean": "docker volume rm -f docker_zstart_pgdata && rm -rf ./zstart_replica*",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "bun run lint:tsc && bun run lint:eslint",
+    "lint:tsc": "tsc -b --noEmit",
+    "lint:eslint": "eslint .",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
