--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
     "@shikijs/markdown-it": "^3.20.0",
+    "@tanstack/react-router": "^1.142.7",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
@@ -40,12 +41,12 @@
     "react-dom": "^18.3.1",
     "shiki": "^3.20.0",
     "sst": "3.9.33",
-    "wouter": "^3.9.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@hono/node-server": "^1.13.2",
+    "@tanstack/router-plugin": "^1.142.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.9",
     "@types/pg": "^8.16.0",
