--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "generate-zero-schema": "drizzle-zero generate -f -o src/db/schema.ts",
-    "format": "oxfmt --write ."
+    "format": "oxfmt --write .",
+    "format:check": "oxfmt --check ."
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
