migrating to tanstack issues

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently -k -n db,zero,ui -c blue,green,yellow \"bun run dev:db-up\" \"bun run dev:zero-cache\" \"bun run dev:ui\"",
-    "dev:ui": "vite",
+    "dev": "concurrently -k -n db,zero,vite -c blue,green,cyan \"bun run dev:db-up\" \"bun run dev:zero-cache\" \"bun run dev:vite\"",
+    "dev:vite": "vite dev",
     "dev:zero-cache": "zero-cache-dev",
     "dev:db-up": "docker compose --env-file .env -f ./docker/docker-compose.yml up",
     "dev:db-down": "docker compose --env-file .env -f ./docker/docker-compose.yml down",
     "dev:clean": "docker volume rm -f docker_zstart_pgdata && rm -rf ./zstart_replica*",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "start": "NODE_ENV=production bun run dist/server.js",
+    "preview": "bun run server.ts",
     "lint": "bun run lint:tsc && bun run lint:eslint",
     "lint:tsc": "tsc -b --noEmit",
     "lint:eslint": "eslint .",
@@ -29,12 +31,17 @@
     "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
     "@shikijs/markdown-it": "^3.20.0",
-    "@tanstack/react-router": "^1.142.7",
+    "@tanstack/react-devtools": "^0.9.0",
+    "@tanstack/react-router": "^1.144.0",
+    "@tanstack/react-router-devtools": "^1.144.0",
+    "@tanstack/react-router-ssr-query": "^1.144.0",
+    "@tanstack/react-start": "^1.144.0",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "markdown-it-async": "^2.2.0",
+    "nitro": "^3.0.1-alpha.1",
     "octokit": "^5.0.5",
     "oxfmt": "^0.19.0",
     "pg": "^8.16.3",
@@ -43,18 +50,21 @@
     "react-dom": "^18.3.1",
     "shiki": "^3.20.0",
     "sst": "3.9.33",
+    "vite-tsconfig-paths": "^6.0.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@hono/node-server": "^1.13.2",
-    "@tanstack/router-plugin": "^1.142.7",
+    "@tanstack/devtools-vite": "^0.4.0",
+    "@tanstack/router-plugin": "^1.144.0",
+    "@types/bun": "^1.3.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.9",
     "@types/pg": "^8.16.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.5.0",
     "concurrently": "^9.2.1",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.31.8",
@@ -64,10 +74,11 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "hono": "^4.6.6",
+    "tsr": "^1.3.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vercel": "^41.3.2",
-    "vite": "^5.4.1"
+    "vinxi": "^0.5.10",
+    "vite": "^6.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
