run tanstack production server with bun

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dev:db-down": "docker compose --env-file .env -f ./docker/docker-compose.yml down",
     "dev:clean": "docker volume rm -f docker_zstart_pgdata && rm -rf ./zstart_replica*",
     "build": "vite build",
-    "start": "NODE_ENV=production bun run dist/server.js",
-    "preview": "bun run server.ts",
+    "start": "bun run server.ts",
     "lint": "bun run lint:tsc && bun run lint:eslint",
     "lint:tsc": "tsc -b --noEmit",
     "lint:eslint": "eslint .",
