webhook events support

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ ZERO_SCHEMA_FILE="schema.ts"
 GITHUB_CLIENT_ID="sdlkjdsflkj"
 GITHUB_CLIENT_SECRET="23lkj324lkj234l2kj43"
 BETTER_AUTH_SECRET="223l4kj234lkj234"
+GITHUB_WEBHOOK_SECRET=bitbitbit05012026
