--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@octokit/webhooks-types": "^7.6.1",
     "@pierre/diffs": "^1.0.0",
     "@primer/octicons-react": "^19.21.1",
     "@rocicorp/zero": "^0.25.2",
