--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ GITHUB_CLIENT_ID="sdlkjdsflkj"
 GITHUB_CLIENT_SECRET="23lkj324lkj234l2kj43"
 BETTER_AUTH_SECRET="223l4kj234lkj234"
 GITHUB_WEBHOOK_SECRET=bitbitbit05012026
+INSTANT_APP_ID="82589b71-875c-4d6b-bf1a-78e0ad02b8ca"
+INSTANT_ADMIN_TOKEN="sdfsdfsdf-sdfsdf-4sdfsdf36c-811sdf1-sdfsdfsd"
