--- a/package.json
+++ b/package.json
@@ -4,47 +4,38 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently -k -n db,zero,vite -c blue,green,cyan \"bun run dev:db-up\" \"bun run dev:zero-cache\" \"bun run dev:vite\"",
-    "dev:vite": "vite dev",
-    "dev:zero-cache": "zero-cache-dev",
-    "dev:db-up": "docker compose --env-file .env -f ./docker/docker-compose.yml up",
-    "dev:db-down": "docker compose --env-file .env -f ./docker/docker-compose.yml down",
-    "dev:clean": "docker volume rm -f docker_zstart_pgdata && rm -rf ./zstart_replica*",
+    "dev": "vite dev",
     "build": "vite build",
     "start": "bun run server.ts",
     "lint": "bun run lint:tsc && bun run lint:eslint",
     "lint:tsc": "tsc -b --noEmit",
     "lint:eslint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "generate-zero-schema": "drizzle-zero generate -f -o src/db/schema.ts",
     "format": "oxfmt --write .",
-    "format:check": "oxfmt --check ."
+    "format:check": "oxfmt --check .",
+    "instant:push:schema": "INSTANT_SCHEMA_FILE_PATH=src/instant.schema.ts npx instant-cli push schema --yes",
+    "instant:push:perms": "cp src/instant.perms.ts instant.perms.ts && npx instant-cli push perms --yes && rm instant.perms.ts",
+    "instant:push": "bun run instant:push:schema && bun run instant:push:perms"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@instantdb/admin": "^0.22.96",
+    "@instantdb/react": "^0.22.96",
     "@octokit/webhooks-types": "^7.6.1",
     "@pierre/diffs": "^1.0.0",
     "@primer/octicons-react": "^19.21.1",
-    "@rocicorp/zero": "^0.25.2",
     "@shikijs/markdown-it": "^3.20.0",
     "@tanstack/react-devtools": "^0.9.0",
     "@tanstack/react-router": "^1.144.0",
     "@tanstack/react-router-devtools": "^1.144.0",
     "@tanstack/react-router-ssr-query": "^1.144.0",
     "@tanstack/react-start": "^1.144.0",
-    "better-auth": "^1.4.7",
-    "drizzle-orm": "^0.41.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "markdown-it-async": "^2.2.0",
     "nitro": "^3.0.1-alpha.1",
     "octokit": "^5.0.5",
     "oxfmt": "^0.19.0",
-    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
@@ -61,14 +52,9 @@
     "@types/bun": "^1.3.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.7.9",
-    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.5.0",
-    "concurrently": "^9.2.1",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.31.8",
-    "drizzle-zero": "^0.17.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
@@ -79,13 +65,5 @@
     "typescript-eslint": "^8.0.1",
     "vinxi": "^0.5.10",
     "vite": "^6.0.0"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@rocicorp/zero-sqlite3"
-    ]
-  },
-  "trustedDependencies": [
-    "@rocicorp/zero-sqlite3"
-  ]
+  }
 }
