--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
       "@/pages/*": ["./src/pages/*"],
-      "@/lib/*": ["./src/lib/*"],
-      "@/db/*": ["./src/db/*"]
+      "@/lib/*": ["./src/lib/*"]
     }
   },
   "files": [],
