--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,6 @@
-ZERO_UPSTREAM_DB="postgresql://user:password@127.0.0.1:5430/postgres"
-VITE_PUBLIC_ZERO_CACHE_URL="http://localhost:4848"
-ZERO_QUERY_URL="http://localhost:5173/api/zero/query"
-ZERO_MUTATE_URL="http://localhost:5173/api/zero/mutate"
-ZERO_QUERY_FORWARD_COOKIES="true"
-ZERO_MUTATE_FORWARD_COOKIES="true"
-ZERO_SCHEMA_FILE="schema.ts"
-GITHUB_CLIENT_ID="sdlkjdsflkj"
-GITHUB_CLIENT_SECRET="23lkj324lkj234l2kj43"
-BETTER_AUTH_SECRET="223l4kj234lkj234"
-GITHUB_WEBHOOK_SECRET=bitbitbit05012026
+BASE_URL="http://localhost:5173"
+GITHUB_CLIENT_ID=Iv23liIPo4KHqHXsXEeF
+GITHUB_CLIENT_SECRET=234lkj234lkj234lsdfsk234jlkj234
+GITHUB_WEBHOOK_SECRET=secret
 INSTANT_APP_ID="82589b71-875c-4d6b-bf1a-78e0ad02b8ca"
-INSTANT_ADMIN_TOKEN="sdfsdfsdf-sdfsdf-4sdfsdf36c-811sdf1-sdfsdfsd"
+INSTANT_ADMIN_TOKEN="sdfds-f-sdf-sdf-sdf-s"
