--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-router-devtools": "^1.144.0",
     "@tanstack/react-router-ssr-query": "^1.144.0",
     "@tanstack/react-start": "^1.144.0",
+    "cmdk": "^1.1.1",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "markdown-it-async": "^2.2.0",
