--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "oxlint --fix",
     "format": "oxfmt --write .",
     "format:check": "oxfmt --check .",
-    "instant:push:schema": "INSTANT_SCHEMA_FILE_PATH=src/instant.schema.ts npx instant-cli push schema --yes",
-    "instant:push:perms": "cp src/instant.perms.ts instant.perms.ts && npx instant-cli push perms --yes && rm instant.perms.ts",
+    "instant:push:schema": "INSTANT_SCHEMA_FILE_PATH=src/instant.schema.ts bunx instant-cli push schema --yes",
+    "instant:push:perms": "cp src/instant.perms.ts instant.perms.ts && bunx instant-cli push perms --yes && rm instant.perms.ts",
     "instant:push": "bun run instant:push:schema && bun run instant:push:perms",
     "test": "vitest run",
     "test:watch": "vitest",
