chore: add consistent-type-definitions rule and fix violations
- Add @typescript-eslint/consistent-type-definitions: error to oxlint
- Auto-fix: convert type X = {} to interface X {} across codebase
- Fix cerebras.ts: add type assertion for SDK message compatibility
- Add eslint-disable for intentional unknown usage (github-app, settings)

Made-with: Cursor

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -109,6 +109,7 @@
         "@typescript-eslint/await-thenable": "error",
         "@typescript-eslint/ban-ts-comment": "error",
         "@typescript-eslint/consistent-type-imports": "warn",
+        "@typescript-eslint/consistent-type-definitions": "error",
         "no-array-constructor": "error",
         "@typescript-eslint/no-array-delete": "error",
         "@typescript-eslint/no-base-to-string": "error",
